included date name and period time

--- a/testcase/sample.in
+++ b/testcase/sample.in
@@ -1,161 +1,187 @@
 10 14 12 3 2
+Day1
+Day2
+Day3
+Day4
+Day5
+Day6
+Day7
+Day8
+Day9
+Day10
+Day11
+Day12
+Day13
+Day14
+Period1 Period1
+Period2 Period2
+Period3 Period3
+Period4 Period4
+Period5 Period5
+Period6 Period6
+Period7 Period7
+Period8 Period8
+Period9 Period9
+Period10 Period10
+Period11 Period11
+Period12 Period12
 Name0
 1
-0 1 0 0 1 0 1 1 1 1 0 0 
-1 1 1 1 0 1 0 0 0 0 1 1 
-1 1 1 0 0 1 0 1 1 0 0 1 
-1 0 1 0 1 0 1 0 1 1 0 1 
-1 1 0 0 1 0 1 1 1 0 0 1 
-1 1 0 1 1 0 0 1 1 1 0 1 
-1 0 1 1 1 0 1 1 1 1 1 0 
-0 0 0 0 1 0 1 0 1 1 0 1 
-1 0 1 1 1 1 0 1 1 0 0 0 
-1 0 1 0 1 0 0 1 1 0 1 1 
-0 1 1 1 1 1 0 0 1 0 0 0 
-0 0 1 1 0 1 1 1 1 1 0 1 
-0 1 1 0 0 1 1 0 1 0 0 0 
-0 0 0 0 1 1 1 0 1 1 0 1 
+1 0 1 1 0 1 0 1 1 0 0 1 
+0 0 1 1 1 1 0 0 1 0 0 0 
+0 1 0 1 1 1 1 1 0 1 1 1 
+0 1 1 0 0 1 0 0 1 1 0 0 
+0 0 0 1 1 1 1 0 1 0 0 1 
+1 1 0 0 1 1 1 1 0 0 1 0 
+1 1 0 1 0 0 0 0 0 0 0 0 
+0 1 0 0 0 0 1 1 0 0 1 0 
+1 0 1 0 1 0 1 1 0 1 0 1 
+1 0 0 0 1 0 0 1 1 1 1 0 
+0 0 0 1 0 0 0 0 0 0 0 1 
+0 1 0 1 0 1 0 1 0 0 0 1 
+1 0 0 1 0 0 0 0 0 0 1 1 
+1 1 0 1 0 0 0 0 0 0 0 0 
 Name1
-1
-0 0 1 1 0 1 0 1 1 1 1 0 
-1 1 1 0 0 1 0 0 0 0 0 0 
-1 0 1 1 0 0 1 1 1 0 1 1 
-1 0 0 1 1 0 0 1 0 1 1 1 
-1 0 0 0 0 1 1 0 0 1 1 0 
-0 1 0 1 1 0 1 1 1 1 1 0 
-1 0 0 1 0 0 1 0 1 1 0 1 
-1 1 1 1 0 0 0 1 0 1 1 1 
-0 0 1 1 1 0 0 1 0 0 0 0 
-0 1 0 0 1 0 0 1 0 1 1 1 
-1 0 1 0 0 1 0 1 0 0 0 1 
-1 1 1 0 0 0 1 1 1 1 1 1 
-0 1 1 0 1 1 0 0 0 0 0 0 
-1 1 1 0 1 1 1 0 1 1 1 0 
+0
+1 0 1 1 0 1 1 0 1 0 1 0 
+0 1 0 1 1 0 1 0 0 0 1 1 
+1 1 1 0 1 0 1 1 1 1 1 0 
+0 0 1 0 1 0 1 1 0 0 1 1 
+0 0 0 0 0 1 1 1 1 0 1 0 
+0 1 0 1 1 1 0 0 0 1 1 0 
+1 0 0 1 1 0 0 1 0 1 0 0 
+1 0 1 0 0 1 0 0 1 1 1 0 
+0 0 0 0 0 1 0 0 1 0 0 0 
+1 0 0 1 1 1 1 1 0 1 1 1 
+0 1 1 0 1 1 1 0 0 1 1 1 
+1 0 0 1 1 1 0 0 1 0 0 0 
+0 0 0 1 0 1 0 1 0 1 1 0 
+1 0 1 1 1 1 0 0 1 1 1 1 
 Name2
 1
-1 0 1 0 0 1 1 1 1 1 0 1 
-1 0 1 1 0 1 0 1 0 0 0 1 
-1 0 0 0 1 1 0 0 1 0 0 0 
-0 1 0 0 0 1 1 0 1 1 0 1 
-1 0 0 1 0 1 1 0 1 0 0 0 
-1 1 1 0 1 0 1 1 0 0 1 0 
-0 0 0 1 1 1 1 1 0 0 1 0 
-1 0 1 1 1 1 0 0 1 1 1 0 
-0 1 1 1 0 0 1 0 0 1 1 1 
-1 1 0 0 0 1 1 1 0 1 1 0 
-1 1 0 0 0 0 0 1 0 0 0 1 
-0 1 0 0 1 1 0 1 1 0 0 1 
-1 1 1 0 0 0 1 0 0 0 1 0 
-0 1 0 0 1 1 0 0 0 1 0 0 
+0 1 0 0 0 1 0 0 0 1 1 0 
+0 1 1 1 1 0 1 0 0 1 1 1 
+1 1 1 1 1 1 1 1 1 1 0 0 
+1 1 1 1 1 1 1 1 1 0 1 1 
+0 1 0 0 1 0 0 0 1 0 1 0 
+1 0 0 0 0 0 0 1 0 0 0 0 
+0 0 0 0 0 1 1 1 0 0 1 0 
+0 1 0 1 0 1 1 0 1 1 1 0 
+0 1 0 0 0 0 1 0 1 0 0 1 
+1 0 0 1 0 0 0 0 0 0 1 1 
+0 0 1 0 0 1 1 1 1 1 0 0 
+1 0 0 0 1 1 0 1 1 1 0 0 
+0 0 1 1 0 0 1 1 0 1 1 1 
+1 1 1 0 0 1 1 0 1 1 0 0 
 Name3
 1
-1 1 1 0 1 1 0 1 1 0 1 1 
-0 0 0 1 0 0 1 0 1 0 1 1 
-1 1 0 0 0 1 0 0 0 1 0 0 
-1 1 0 1 1 1 1 0 0 0 0 1 
-0 1 0 1 0 1 1 1 1 1 0 0 
-0 1 1 0 0 1 0 0 1 1 1 0 
-1 0 0 0 1 1 0 1 0 1 1 1 
-1 0 1 1 0 1 0 1 1 1 1 1 
-0 1 0 0 1 1 1 0 1 1 0 0 
-0 1 0 0 0 0 1 0 0 0 1 0 
-0 0 1 0 1 0 0 1 1 0 1 0 
-1 1 0 1 1 1 0 0 0 0 0 0 
-1 0 0 0 0 1 1 1 1 0 0 0 
-0 1 1 0 1 1 0 1 0 1 0 1 
+0 1 1 0 1 1 1 0 1 1 0 0 
+0 0 1 0 0 1 1 0 1 0 1 0 
+1 1 0 1 1 1 1 0 0 1 1 1 
+0 0 1 0 0 0 1 0 0 0 0 0 
+0 1 1 0 1 0 0 1 1 1 1 1 
+0 0 0 1 1 1 1 1 0 1 0 0 
+1 1 0 1 0 0 1 1 1 0 1 1 
+1 0 1 0 0 0 0 0 1 0 0 1 
+1 0 1 1 0 1 0 0 1 1 1 0 
+0 0 1 0 0 1 0 1 0 0 0 0 
+1 1 0 0 0 0 1 1 1 1 0 0 
+0 1 0 1 1 1 1 1 0 1 1 1 
+0 0 1 0 0 0 0 0 0 1 1 1 
+0 0 1 0 1 1 1 1 1 1 1 0 
 Name4
 1
-1 0 1 1 0 1 1 1 1 0 1 0 
-0 1 1 1 0 0 1 1 0 1 0 0 
-0 0 0 1 1 0 1 1 1 1 0 0 
-0 1 1 0 1 0 0 1 1 1 0 0 
-1 1 0 1 0 1 1 0 0 1 1 0 
-1 0 0 0 1 1 1 1 1 1 0 1 
-1 0 0 0 0 0 0 0 0 0 0 0 
-1 1 1 0 1 0 0 0 0 1 1 1 
-1 0 1 0 1 1 1 1 0 0 1 1 
-1 0 0 1 0 1 1 1 1 0 1 1 
-0 0 0 1 0 1 0 1 1 1 0 0 
-1 0 0 1 1 0 0 0 1 1 0 0 
-1 0 1 1 0 0 1 0 0 1 0 0 
-1 0 1 0 0 1 1 0 1 1 1 1 
+0 0 0 1 0 0 1 1 1 0 0 1 
+0 1 0 1 0 0 0 0 0 0 1 0 
+1 1 0 0 0 1 0 1 1 1 1 1 
+1 0 0 1 0 0 0 1 0 0 0 1 
+0 1 1 1 1 1 0 0 1 1 0 0 
+1 0 0 0 1 1 1 1 1 0 1 1 
+1 0 1 0 0 0 0 1 1 1 1 1 
+0 0 0 0 1 1 0 0 1 1 0 0 
+1 1 0 0 1 0 0 1 1 0 1 0 
+0 0 0 0 1 0 1 1 1 0 0 1 
+0 0 1 0 1 0 0 1 0 0 0 1 
+1 1 1 1 1 1 0 1 1 0 1 1 
+0 1 0 0 1 1 1 1 1 1 0 0 
+1 1 0 1 0 1 0 0 0 0 0 1 
 Name5
-0
-1 1 0 1 0 1 1 1 1 0 0 0 
-0 0 0 1 0 0 0 0 1 0 1 1 
-0 1 0 0 0 0 0 1 0 0 1 0 
-1 0 0 0 1 1 0 0 0 0 1 1 
-0 1 0 0 0 0 0 1 0 1 0 0 
-0 1 1 0 1 0 1 0 1 0 1 0 
-0 0 1 1 1 1 1 1 1 0 1 1 
-0 0 0 0 0 1 0 0 1 0 0 1 
-1 1 0 0 1 1 0 0 0 0 0 1 
-0 0 1 1 1 0 0 0 1 0 1 0 
-0 1 0 0 0 1 0 0 1 1 1 1 
-0 0 1 1 1 1 0 1 0 0 1 1 
-0 1 0 1 0 0 1 1 0 0 0 1 
-1 0 1 1 0 1 0 0 0 0 1 1 
+1
+1 1 0 1 1 0 0 0 0 0 0 1 
+1 1 0 1 0 0 0 1 1 0 1 1 
+0 0 1 0 0 1 1 1 1 1 0 0 
+1 1 1 1 1 0 0 1 1 0 0 1 
+1 0 0 1 1 0 0 0 0 0 0 1 
+1 1 0 1 0 1 0 1 1 1 1 0 
+0 1 1 0 1 0 0 0 0 0 1 0 
+0 0 0 1 0 0 0 0 1 1 1 0 
+1 1 1 0 1 1 0 1 0 0 0 0 
+1 0 1 1 1 1 1 0 1 1 1 0 
+0 0 1 1 1 1 1 1 1 1 0 1 
+0 1 0 0 0 0 0 1 1 1 1 0 
+0 0 0 0 1 1 0 0 1 0 0 0 
+0 0 0 1 1 0 0 0 0 1 1 0 
 Name6
-0
-0 0 0 1 0 0 1 0 0 1 0 1 
-0 1 0 1 0 0 1 1 0 1 1 0 
-0 0 0 0 1 0 0 1 0 0 0 0 
-0 0 0 1 0 0 1 0 0 1 0 1 
-1 0 1 0 0 1 0 0 1 1 0 1 
-1 0 1 1 1 1 1 0 0 0 1 0 
-0 0 0 0 0 1 1 1 1 0 1 0 
-0 1 1 1 0 1 1 0 1 1 0 0 
-0 1 0 0 1 0 0 0 0 0 0 0 
-1 1 1 1 1 0 0 0 0 0 1 1 
-1 1 0 0 0 1 1 1 0 0 0 0 
-1 0 1 0 1 1 0 1 1 0 1 0 
-0 0 0 1 0 1 0 1 0 1 1 1 
-0 1 1 1 1 1 1 1 1 0 0 0 
+1
+1 0 1 0 0 1 0 1 0 0 0 0 
+0 0 1 1 0 1 0 1 1 1 1 0 
+1 0 1 1 0 1 1 1 0 0 1 0 
+0 0 0 0 0 1 1 1 1 1 1 0 
+1 0 1 1 1 1 1 1 0 0 0 0 
+0 1 0 1 1 1 1 1 0 1 1 1 
+0 0 1 0 1 1 0 0 0 0 1 1 
+0 1 0 0 1 1 0 0 0 1 0 0 
+0 1 1 0 1 1 0 0 1 0 1 1 
+0 1 1 0 0 0 0 0 0 1 0 0 
+0 1 1 1 1 0 1 1 1 0 1 1 
+0 1 0 0 1 1 1 0 0 0 1 1 
+1 1 1 1 0 1 0 1 0 0 0 0 
+1 1 1 0 0 1 1 1 0 1 1 1 
 Name7
 1
-1 0 1 0 0 0 1 1 1 0 1 0 
-1 1 0 0 1 0 1 0 0 1 0 1 
-1 1 0 0 0 1 0 0 0 1 1 0 
-1 0 0 1 1 0 0 0 0 1 1 0 
-1 0 0 1 1 0 0 0 1 1 1 0 
-0 1 0 1 1 1 0 0 0 0 0 0 
-0 0 1 1 0 0 0 1 0 1 1 0 
-0 1 1 1 1 0 0 1 1 1 1 1 
-1 1 1 0 0 1 0 1 0 0 1 1 
-1 1 1 1 1 1 0 0 0 0 1 1 
-1 1 0 0 1 1 1 1 1 1 1 1 
-1 0 1 1 1 1 0 1 0 1 0 1 
-0 1 1 1 1 0 0 1 1 1 0 1 
-1 1 0 1 0 0 1 1 1 0 0 1 
+1 0 1 0 1 0 0 0 1 0 1 0 
+1 0 0 0 0 1 0 0 1 0 1 0 
+1 1 1 1 0 1 0 0 0 1 1 1 
+1 1 1 1 1 1 0 1 0 1 0 1 
+1 0 0 1 1 0 1 0 1 1 1 0 
+1 0 0 0 0 1 1 1 0 0 0 0 
+1 0 1 1 1 0 1 0 0 0 1 1 
+1 0 0 1 0 1 1 1 0 0 0 1 
+0 0 1 0 1 1 0 0 0 1 0 1 
+0 1 1 1 0 1 0 1 1 1 0 0 
+1 1 1 0 0 0 0 0 0 0 1 1 
+0 0 1 0 1 0 1 1 1 0 1 1 
+1 1 0 1 0 1 0 1 1 0 0 1 
+0 1 0 0 1 1 0 1 0 0 0 0 
 Name8
-1
-1 1 0 1 1 0 0 0 1 1 1 1 
-0 0 1 0 0 1 0 0 1 1 1 0 
-1 1 1 0 0 1 1 1 0 1 1 0 
-0 1 1 0 1 0 0 0 1 0 0 1 
-1 1 1 0 0 1 1 1 0 1 0 1 
-1 1 1 1 0 1 1 1 1 1 0 1 
-1 1 1 0 1 1 0 1 1 1 1 0 
-0 1 0 1 0 1 1 1 0 1 1 1 
-1 0 0 0 0 0 1 0 1 1 1 1 
-1 1 1 1 1 0 1 0 1 1 1 1 
-1 0 1 0 1 1 1 1 0 1 0 1 
-1 1 1 0 0 1 0 0 0 1 1 1 
-1 1 1 1 0 1 0 0 1 1 1 0 
-0 1 1 0 0 1 0 0 1 0 1 0 
-Name9
 0
-0 1 1 0 0 1 1 0 1 1 1 0 
-0 1 1 1 0 0 1 1 1 1 0 0 
-1 0 0 1 1 1 1 0 1 1 0 1 
-0 1 0 1 1 1 1 1 1 1 0 1 
-1 0 0 1 1 1 0 1 1 1 1 0 
-0 1 1 0 0 1 1 1 1 1 0 1 
-0 1 1 0 1 1 1 0 0 0 0 0 
-1 0 0 0 0 0 0 0 1 1 0 1 
-1 0 1 1 0 0 0 1 1 1 1 0 
-0 1 0 0 1 1 1 1 1 1 1 0 
-0 0 1 0 0 0 0 0 1 0 1 0 
-0 1 0 1 0 1 1 0 1 0 0 1 
-0 1 1 0 0 1 1 1 0 0 1 1 
-1 1 1 0 0 1 0 1 0 0 1 1 
+1 0 1 0 1 0 0 1 1 1 1 0 
+1 1 0 1 0 1 1 1 1 1 0 0 
+1 0 0 1 0 0 1 1 0 0 1 1 
+1 0 1 0 1 0 0 1 0 1 0 1 
+1 1 0 0 0 1 1 0 0 1 0 1 
+1 0 0 0 0 0 0 0 1 0 0 1 
+1 0 1 1 1 0 1 0 1 0 0 1 
+1 0 0 0 0 0 1 0 1 1 0 1 
+1 0 0 0 0 0 0 1 1 1 0 1 
+1 0 1 0 1 1 0 0 1 0 0 1 
+0 1 1 0 0 0 1 0 0 0 0 1 
+1 1 0 0 0 1 1 0 0 0 1 1 
+0 0 0 0 1 1 1 1 0 1 1 0 
+1 1 1 1 1 1 1 0 0 1 0 1 
+Name9
+1
+1 0 0 1 0 1 0 0 1 1 0 0 
+1 0 1 0 0 0 0 0 1 1 0 0 
+1 0 0 1 1 1 0 0 1 0 1 0 
+0 0 1 1 1 0 0 0 1 0 0 1 
+0 0 1 1 0 1 0 1 1 0 1 1 
+1 1 0 1 0 1 0 1 0 0 0 1 
+1 1 0 0 0 1 1 1 0 1 0 1 
+0 0 0 1 0 0 1 1 1 1 1 1 
+0 0 1 1 1 0 0 1 0 0 1 1 
+0 0 0 1 1 0 0 0 1 0 1 1 
+0 0 0 1 0 1 1 0 0 1 0 1 
+0 0 0 0 1 0 1 1 0 1 1 1 
+0 1 1 1 1 0 1 1 0 0 1 0 
+1 0 0 0 0 1 0 1 0 0 0 1 
