--- a/testcase/sample_1.in
+++ b/testcase/sample_1.in
@@ -1,4 +1,19 @@
 3 7 8 2 2
+Day1
+Day2
+Day3
+Day4
+Day5
+Day6
+Day7
+Period1 Period1
+Period2 Period2
+Period3 Period3
+Period4 Period4
+Period5 Period5
+Period6 Period6
+Period7 Period7
+Period8 Period8
 Alex
 0
 1 0 0 1 1 1 0 1 
